# GRUB-Storm-Utils-main

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Linux/: CMakeLists.txt  install.sh
Linux/include/: grub_backup.h  grub_manager.h  grub_theme.h  grub_validator.h  hardware_info.h  network_info.h  process_info.h  system_info.h  ui.h  ui_advanced.h  ui_gtk.h  ui_ncurses.h
Linux/src/: gtk_main.cpp  ncurses_main.cpp  simple_gtk_main.cpp  simple_gui_main.cpp  simple_main.cpp  universal_main.cpp  zenity_main.cpp
Linux/src/core/: grub_backup.cpp  grub_manager.cpp  grub_theme.cpp  grub_validator.cpp
Linux/src/main/: main.cpp  main_gtk.cpp
Linux/src/system/: hardware_info.cpp  network_info.cpp  process_info.cpp  system_info.cpp
Linux/src/ui/: ui.cpp  ui_advanced.cpp  ui_console.cpp  ui_gtk.cpp  ui_ncurses.cpp  ui_status_bar.cpp  ui_theme_editor.cpp
Windows/: CMakeLists.txt  CMakeLists_windows.txt
Windows/include/: system_info.h  ui_qt.h
Windows/src/: main_simple.cpp  main_windows.cpp
Windows/src/core/: grub_manager.cpp
Windows/src/main/: main_qt.cpp
Windows/src/system/: system_info.cpp
Windows/src/ui/: ui_qt.cpp
